# aoc

./: LICENSE
2015/python/: :q  <  make_day.sh  pyproject.toml
2015/python/async/: async.py
2015/python/day1/: day1.py  day1_test.py
2015/python/day10/: day10.py  day10_test.py
2015/python/day11/: day11.py  day11_test.py
2015/python/day12/: day12.py  day12_test.py
2015/python/day13/: day13.py  day13_test.py
2015/python/day14/: day14.py
2015/python/day15/: day15.py
2015/python/day16/: day16_test.py
2015/python/day17/: day17.py
2015/python/day18/: day18.py
2015/python/day19/: day19.py  day19_test.py
2015/python/day2/: day2.py  day2_test.py
2015/python/day3/: day3.py
2015/python/day4/: day4.py
2015/python/day5/: day5.py
2015/python/day6/: day6.py
2015/python/day7/: day7.py
2015/python/day8/: day8.py
2015/python/day9/: day9.py
2016/lua/day1/: day1.lua
2017/fsharp/: day1.fsx
2017/python/: _io.py  pyproject.toml
2017/python/src/aoc_2017/: __init__.py  day1.py
2017/python/tests/: day1_test.py
